--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,6 +7,7 @@
     "start": "nodemon node app.js"
   },
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "chalk": "^5.3.0",
     "cookie-parser": "^1.4.6",
     "express": "^4.19.2",
