--- a/back-end/package.json
+++ b/back-end/package.json
@@ -10,6 +10,8 @@
     "@prisma/client": "^6.5.0",
     "chalk": "^5.3.0",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "mongodb": "^6.15.0",
     "morgan": "^1.10.0"
