--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "dotenv": "^16.5.0",
     "next": "15.2.4",
     "nodemon": "^3.1.10",
     "react": "^19.0.0",
